@@ -1,15 +1,9 @@
-# Copyright (c) 2011 Godefroid Chapelle
-# 
-# This file is part of ipdb.
-# GNU package is free software: you can redistribute it and/or modify it under
-# the terms of the GNU General Public License as published by the Free 
-# Software Foundation, either version 2 of the License, or (at your option) 
-# any later version.
+# Copyright (c) 2011-2016 Godefroid Chapelle and ipdb development team
 #
-# GNU package is distributed in the hope that it will be useful, but 
-# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
-# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
-# for more details.
+# This file is part of ipdb.
+# Redistributable under the revised BSD license
+# https://opensource.org/licenses/BSD-3-Clause
+
 
 def output(arg):
     print("MANUAL: arg=%s" % arg)
